src/app/pages/artist/artist.page.scss
.artists {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-column-gap: 64px;
  grid-row-gap: 128px;

  margin-top: 64px;
}

.artist-line {

  & .artist-image {
    overflow: hidden;
    width: 220px;
    height: 220px;
    border-radius: 50%;

    & img {
      width: 220px;
      height: 220px;
    }
  }

  & .artist-line-paragraph {
    & h4 {
      margin-top: 32px
    }
  }
}

@media screen and (max-width: 992px) and (min-width: 576px) {
  .artist-line {
    display: flex;
    align-items: center;

    & .artist-line-paragraph {
      margin-left: 32px;
    }
  }

  .artists {
    grid-template-columns: 1fr;
  }
}

@media screen and (max-width: 576px) {
  .artist-line {
    display: block;
  }

  .artists {
    grid-template-columns: 1fr;
    grid-row-gap: 64px;
  }

  .artist-line {

    & .artist-image-bloc {
      display: flex;
      justify-content: center;
    }

    & .artist-image {
      height: 180px;
      width: 180px;


      & img {
        width: 180px;
        height: 180px;
      }
    }

    & .artist-line-paragraph {
      font-size: 14px;
      text-align: center;
    }
  }
}

